--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ ImageGeneration/.idea/
 ImageGeneration/Resources/colored
 ImageGeneration/Resources/colored32
 ImageGeneration/Resources/grayscale
+ml temp/
